--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 </head>
 
 <body>
+    <script src="/src/index.js"></script>
+
     <h1>Following API test</h1>
     <p>
-        <a href="https://docs.microsoft.com/en-us/sharepoint/dev/general-development/following-people-and-content-rest-api-reference-for-sharepoint">
+        <a href="https://docs.microsoft.com/en-us/sharepoint/dev/general-development/following-people-and-content-rest-api-reference-for-sharepoint">Documentation
         </a>
+        
     </p>
 
 </body>
