working with example

--- a/index.html
+++ b/index.html
@@ -6,17 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Test Following API</title>
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+
+
 </head>
 
 <body>
-    <script src="/src/index.js"></script>
+    <script src="/src/script.js"></script>
 
     <h1>Following API test</h1>
     <p>
         <a href="https://docs.microsoft.com/en-us/sharepoint/dev/general-development/following-people-and-content-rest-api-reference-for-sharepoint">Documentation
         </a>
-        
+
     </p>
+    <p id="test">Some lorem</p>
 
 </body>
 
